%% ERD generated from backend/src/db/init_db.py
%% Note: init_db.py defines train_observations.stop_id -> stop_catalog(stop_id),
%% but no stop_catalog table exists. This ERD maps that relationship to stops.

erDiagram

    route_to_stop {
        TEXT route_id PK
        TEXT stop_id PK
        INTEGER direction_id PK
        INTEGER stop_sequence
    }

    stops {
        TEXT stop_id PK
        TEXT stop_name
        TEXT borough
        REAL latitude
        REAL longitude
        BOOLEAN is_active
    }

    mta_event_lookup {
        TEXT event_id PK
        TEXT event_name
        TEXT event_type
        TEXT event_description
        BOOLEAN is_planned
    }

    trip_statistics {
        TEXT trip_id PK
        TEXT route_id
        INTEGER direction_id
        DATETIME start_time
        DATETIME start_date
        TEXT stop_id
        TEXT day_type
    }

    train_observations {
        INTEGER id PK
        TEXT trip_id FK
        TEXT route_id
        DATETIME timestamp
        DATETIME actual_arrival_time
        INTEGER delay_seconds
        TEXT stop_id FK
        TEXT event_id FK
    }

    external_factors {
        DATETIME timestamp PK
        TEXT weather_condition
        TEXT temp_f
        BOOLEAN is_holiday
    }

    trip_statistics ||--o{ train_observations : has_observations
    stops ||--o{ route_to_stop : appears_in
    stops ||--o{ train_observations : observed_at
    mta_event_lookup ||--o{ train_observations : tagged_by
